# cg042

./: BenchMarkSuite.h  CMakeLists.txt  CountLeadingZeros.cpp  CountLeadingZeros.h  CountTrailingZeros.h  DetReader.h  NaivePopcnt.h  catch.hpp  compute_density_matrix.h  get_double_excitation.h  get_excitation.h.h  get_holes_and_particles.h  get_single_excitation.h  main.cpp  n_excitations.h  sampleTraversal.txt  test.cpp
testData/: caseDegreeNExcitationsExpectedResults.txt  excpectedTmpHoleParticleGetDoubleExcitation.txt  n_excitations_expectedresults.txt  n_excitations_expectedresults2.txt
